--- a/дз/css/style.css
+++ b/дз/css/style.css
@@ -44,14 +44,17 @@ header button{
     width: 1296px;
     height: 600px;
     background-image: url(../img/heads_logo.png);
+    background-repeat: no-repeat;
     margin: 140px auto 0 auto;
+    padding-top: 200px;
+    text-align: center;
+  
 }
 .heads_logo h3{
-    text-align: center;
+    font-size: 24px;
 }
-.heads_logo_cont{
-    text-align: center;
-    width: 200px;
-    height: 200px;
-    margin: 276px auto 0 auto;
+
+.heads_logo h1{
+    margin-top: 20px;
+    font-size: 64px;
 }
